@@ -1,5 +1,11 @@
 2009-12-26  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/book/C/telepathy.xml: Basics: Handles: Write this section. 
+	Removed the main Handles chapter because a) It was planned to cover the 
+	same stuff and b) It should be covered very early.
+
+2009-12-26  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/book/C/telepathy.xml: Basics: D-Bus, telepathy-glib: Explicitly 
 	point out that we are dealing with proxies, not the objects themselves.
 	Added a Headers and Linking sub-section.
